--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -6,21 +6,15 @@ body {
   color: #383f4d;
   line-height: 1.5;
   font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue",
+  font-family: "Segoe UI", "Helvetica Neue",
     sans-serif;
 }
 
-/* 
-=================
-Table
-=====================
-*/
-
 .table_container {
-  max-width: 750px;
+  max-width: 1250px;
   /* max-height: 500px; */
   margin: 0 auto;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 .table {
@@ -61,7 +55,7 @@ th.down {
 
 .table td {
   border-top: 1px solid #ddd;
-  padding: 8px 20px;
+  padding: 10px 30px;
 }
 
 .table tbody tr:first-child td {
